--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mohammed Omair | Software Developer</title>
+   <title>Mohammed Omair Ahmed | Backend Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <style>
@@ -75,23 +75,49 @@
         a:hover {
             text-decoration: underline;
         }
+   .profile-img {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #38bdf8;
+    margin-bottom: 20px;
+}
+
+.buttons {
+    margin-top: 15px;
+}
+
+.btn {
+    display: inline-block;
+    margin: 8px;
+    padding: 10px 20px;
+    background: #38bdf8;
+    color: #0f172a;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: 0.3s ease;
+}
+
+.btn:hover {
+    background: #0ea5e9;
+}
+
     </style>
 </head>
 
 <body>
 
-<header>
-    <h1>Mohammed Omair A</h1>
-    <p>Final Year B.E. AI & Data Science | Backend Developer | Python Enthusiast</p>
+<header>     <img src="profile.jpg" alt="Mohammed Omair Ahmed" class="profile-img">     <h1>Mohammed Omair Ahmed</h1>     <p>Backend Developer | Python & SQL | Building Scalable Systems</p>      <div class="buttons">         <a href="https://github.com/mohammedomair23" target="_blank" class="btn">GitHub</a>         <a href="https://www.linkedin.com/in/mohammed-omair-ahmed-b5a252286" target="_blank" class="btn">LinkedIn</a>     </div> 
 </header>
+   
 
 <section>
     <h2>About Me</h2>
-    <p>
-        I am a final-year Artificial Intelligence and Data Science student with strong
-        interest in backend development and scalable systems. I enjoy building
-        real-world applications using Python, databases, and problem-solving skills.
-    </p>
+   <p>
+I am a final-year Artificial Intelligence and Data Science student with strong interest in backend engineering and scalable system design. I have hands-on experience building machine learning applications, database-driven systems, and Android applications. I enjoy solving real-world problems using Python, data structures, and clean architecture principles.
+</p>
+
 </section>
 
 <section>
@@ -145,11 +171,12 @@
     <h2>Contact</h2>
     <p>Email: mohammedomair365@gmail.com</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/mohammed-omair-ahmed-b5a252286" target="_blank">View Profile</a></p>
-    <p>GitHub: <a href="#">Add Your GitHub Link Here</a></p>
+    <p>GitHub: <a href="https://github.com/mohammedomair23" target="_blank">View GitHub</a></p>
+
 </section>
 
 <footer>
-    © 2026 Mohammed Omair | Built with HTML & CSS
+    © 2026 Mohammed Omair Ahmed | Built with HTML & CSS
 </footer>
 
 </body>
