--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
    <title>Mohammed Omair Ahmed | Backend Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             background-color: #0f172a;
             color: #f1f5f9;
             line-height: 1.6;
         }
 
         header {
-            text-align: center;
-            padding: 60px 20px;
-            background: #1e293b;
+          text-align: center;
+          padding: 80px 20px;
+          background: linear-gradient(135deg, #1e293b, #0f172a);
         }
+
 
         header h1 {
             font-size: 36px;
@@ -43,11 +46,30 @@
         }
 
         .card {
-            background: #1e293b;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 10px;
-        }
+           background: #1e293b;
+           padding: 20px;
+           margin-bottom: 20px;
+           border-radius: 10px;
+           transition: 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+}
+.card {
+    background: #1e293b;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    transition: 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+}
+
 
         .skills span {
             display: inline-block;
@@ -108,7 +130,13 @@
 
 <body>
 
-<header>     <img src="profile.jpg" alt="Mohammed Omair Ahmed" class="profile-img">     <h1>Mohammed Omair Ahmed</h1>     <p>Backend Developer | Python & SQL | Building Scalable Systems</p>      <div class="buttons">         <a href="https://github.com/mohammedomair23" target="_blank" class="btn">GitHub</a>         <a href="https://www.linkedin.com/in/mohammed-omair-ahmed-b5a252286" target="_blank" class="btn">LinkedIn</a>     </div> 
+<header>     <img src="profile.jpg" alt="Mohammed Omair Ahmed" class="profile-img">     
+    <h1>Mohammed Omair Ahmed</h1>     <p>Backend Developer | Python & SQL | Building Scalable Systems</p>      
+    <div class="buttons">         
+        <a href="https://github.com/mohammedomair23" target="_blank" class="btn">GitHub</a>         
+        <a href="https://www.linkedin.com/in/mohammed-omair-ahmed-b5a252286" target="_blank" class="btn">LinkedIn</a> 
+        <a href="Mohammed_Omair_Ahmed_Resume.pdf" target="_blank" class="btn">Download Resume</a>
+    </div> 
 </header>
    
 
@@ -181,3 +209,4 @@ I am a final-year Artificial Intelligence and Data Science student with strong i
 
 </body>
 </html>
+
