--- a/index.html
+++ b/index.html
@@ -53,22 +53,7 @@
            transition: 0.3s ease;
 }
 
-.card:hover {
-    transform: translateY(-6px);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
-}
-.card {
-    background: #1e293b;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    transition: 0.3s ease;
-}
 
-.card:hover {
-    transform: translateY(-6px);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
-}
 
 
         .skills span {
@@ -130,14 +115,18 @@
 
 <body>
 
-<header>     <img src="profile.jpg" alt="Mohammed Omair Ahmed" class="profile-img">     
-    <h1>Mohammed Omair Ahmed</h1>     <p>Backend Developer | Python & SQL | Building Scalable Systems</p>      
-    <div class="buttons">         
-        <a href="https://github.com/mohammedomair23" target="_blank" class="btn">GitHub</a>         
-        <a href="https://www.linkedin.com/in/mohammed-omair-ahmed-b5a252286" target="_blank" class="btn">LinkedIn</a> 
+<header>
+    <img src="profile.jpg" alt="Mohammed Omair Ahmed" class="profile-img">
+    <h1>Mohammed Omair Ahmed</h1>
+    <p>Backend Developer | Python & SQL | Building Scalable Systems</p>
+
+    <div class="buttons">
+        <a href="https://github.com/mohammedomair23" target="_blank" class="btn">GitHub</a>
+        <a href="https://www.linkedin.com/in/mohammed-omair-ahmed-b5a252286" target="_blank" class="btn">LinkedIn</a>
         <a href="Mohammed_Omair_Ahmed_Resume.pdf" target="_blank" class="btn">Download Resume</a>
-    </div> 
+    </div>
 </header>
+
    
 
 <section>
