--- a/index.html
+++ b/index.html
@@ -83,13 +83,20 @@
             text-decoration: underline;
         }
    .profile-img {
-    width: 160px;
-    height: 160px;
+    width: 170px;
+    height: 170px;
     border-radius: 50%;
     object-fit: cover;
     border: 4px solid #38bdf8;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+    transition: 0.3s ease;
 }
+
+.profile-img:hover {
+    transform: scale(1.05);
+}
+
 
 .buttons {
     margin-top: 15px;
